GRAD2-1931-PSI-FTP branch Distribution PSI FTP Part 1 work. Written test case and performed null checks for all the fields.